Update header to include profile image and styling

--- a/index.html
+++ b/index.html
@@ -111,10 +111,13 @@
 </head>
 <body>
   <div class="container">
-    <header>
-      <h1>Your Name</h1>
-      <p>Graduate Student / Software Engineer / 3DCG & Machine Learning</p>
-    </header>
+    <header style="display: flex; align-items: center; gap: 24px; flex-wrap: wrap;">
+        <img src="profile.jpg" alt="Profile Image" style="width: 120px; height: 120px; border-radius: 50%; object-fit: cover; border: 2px solid var(--accent);" />
+        <div>
+          <h1>Your Name</h1>
+          <p>Graduate Student / Software Engineer / 3DCG & Machine Learning</p>
+        </div>
+      </header>
 
     <section>
       <h2>About</h2>
