--- a/index.html
+++ b/index.html
@@ -107,6 +107,24 @@
         font-size: 2rem;
       }
     }
+    
+  .gallery-grid {
+    display: grid;
+    gap: 12px;
+    grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+    margin-top: 16px;
+  }
+    
+  .gallery-grid img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    object-fit: cover;
+    transition: transform 0.3s ease;
+  }
+  .gallery-grid img:hover {
+    transform: scale(1.05);
+  }
   </style>
 </head>
 <body>
@@ -175,6 +193,43 @@
         </ul>
       </div>
     </section>
+
+    <section>
+  <h2>Photo Gallery</h2>
+  <div class="gallery-grid">
+    <a href="images/gallery1.jpg" target="_blank">
+      <img src="images/gallery1.jpg" alt="作例1">
+    </a>
+    <a href="images/gallery2.jpg" target="_blank">
+      <img src="images/gallery2.jpg" alt="作例2">
+    </a>
+    <a href="images/gallery3.jpg" target="_blank">
+      <img src="images/gallery3.jpg" alt="作例3">
+    </a>
+        <a href="images/gallery4.jpg" target="_blank">
+      <img src="images/gallery4.jpg" alt="作例3">
+    </a>
+        <a href="images/gallery5.jpg" target="_blank">
+      <img src="images/gallery5.jpg" alt="作例3">
+    </a>
+        <a href="images/gallery6.jpg" target="_blank">
+      <img src="images/gallery6.jpg" alt="作例3">
+    </a>
+        <a href="images/gallery7.jpg" target="_blank">
+      <img src="images/gallery7.jpg" alt="作例3">
+    </a>
+        <a href="images/gallery8.jpg" target="_blank">
+      <img src="images/gallery8.jpg" alt="作例3">
+    </a>
+        <a href="images/gallery9.jpg" target="_blank">
+      <img src="images/gallery9.jpg" alt="作例3">
+    </a>
+        <a href="images/gallery10.jpg" target="_blank">
+      <img src="images/gallery10.jpg" alt="作例3">
+    </a>
+    <!-- 必要なだけ追加 -->
+  </div>
+</section>
 
     <footer>
       © 2025 Your Name
