--- a/index.html
+++ b/index.html
@@ -197,36 +197,36 @@
     <section>
   <h2>Photo Gallery</h2>
   <div class="gallery-grid">
-    <a href="images/gallery1.jpg" target="_blank">
-      <img src="images/gallery1.jpg" alt="作例1">
-    </a>
-    <a href="images/gallery2.jpg" target="_blank">
-      <img src="images/gallery2.jpg" alt="作例2">
-    </a>
-    <a href="images/gallery3.jpg" target="_blank">
-      <img src="images/gallery3.jpg" alt="作例3">
-    </a>
-        <a href="images/gallery4.jpg" target="_blank">
-      <img src="images/gallery4.jpg" alt="作例3">
-    </a>
-        <a href="images/gallery5.jpg" target="_blank">
-      <img src="images/gallery5.jpg" alt="作例3">
-    </a>
-        <a href="images/gallery6.jpg" target="_blank">
-      <img src="images/gallery6.jpg" alt="作例3">
-    </a>
-        <a href="images/gallery7.jpg" target="_blank">
-      <img src="images/gallery7.jpg" alt="作例3">
-    </a>
-        <a href="images/gallery8.jpg" target="_blank">
-      <img src="images/gallery8.jpg" alt="作例3">
-    </a>
-        <a href="images/gallery9.jpg" target="_blank">
-      <img src="images/gallery9.jpg" alt="作例3">
-    </a>
-        <a href="images/gallery10.jpg" target="_blank">
-      <img src="images/gallery10.jpg" alt="作例3">
-    </a>
+<a href="images/gallery1.JPG" target="_blank">
+  <img src="images/gallery1.JPG" alt="作例1">
+</a>
+<a href="images/gallery2.JPG" target="_blank">
+  <img src="images/gallery2.JPG" alt="作例2">
+</a>
+<a href="images/gallery3.JPG" target="_blank">
+  <img src="images/gallery3.JPG" alt="作例3">
+</a>
+<a href="images/gallery4.JPG" target="_blank">
+  <img src="images/gallery4.JPG" alt="作例4">
+</a>
+<a href="images/gallery5.JPG" target="_blank">
+  <img src="images/gallery5.JPG" alt="作例5">
+</a>
+<a href="images/gallery6.JPG" target="_blank">
+  <img src="images/gallery6.JPG" alt="作例6">
+</a>
+<a href="images/gallery7.JPG" target="_blank">
+  <img src="images/gallery7.JPG" alt="作例7">
+</a>
+<a href="images/gallery8.JPG" target="_blank">
+  <img src="images/gallery8.JPG" alt="作例8">
+</a>
+<a href="images/gallery9.JPG" target="_blank">
+  <img src="images/gallery9.JPG" alt="作例9">
+</a>
+<a href="images/gallery10.JPG" target="_blank">
+  <img src="images/gallery10.JPG" alt="作例10">
+</a>
     <!-- 必要なだけ追加 -->
   </div>
 </section>
