Update profile name and description in index.html

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Name | Profile</title>
-  <meta name="description" content="Lighterのプロフィールサイト" />
+  <title>Yuki Taira | Profile</title>
+  <meta name="description" content="Yuki Tairaのプロフィールサイト" />
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -132,67 +132,10 @@
     <header style="display: flex; align-items: center; gap: 24px; flex-wrap: wrap;">
         <img src="profile.jpg" alt="Profile Image" style="width: 120px; height: 120px; border-radius: 50%; object-fit: cover; border: 2px solid var(--accent);" />
         <div>
-          <h1>Your Name</h1>
-          <p>Graduate Student / Software Engineer / 3DCG & Machine Learning</p>
+          <h1>Yuki Taira</h1>
+          <p>Graduate Student</p>
         </div>
       </header>
-
-    <section>
-      <h2>About</h2>
-      <div class="card">
-        <p>
-          大学院でコンピュータグラフィックスやモーション生成、
-          機械学習を用いた研究に取り組んでいます。
-          C++ を中心に、3DCG、VR、データ解析などに興味があります。
-        </p>
-      </div>
-    </section>
-
-    <section>
-      <h2>Research / Projects</h2>
-      <div class="list">
-        <div class="card">
-          <div class="item-title">Motion Matching for Character Interaction</div>
-          <div class="item-meta">C++ / Machine Learning / Animation</div>
-          <p>
-            複数キャラクタの相互作用を含むアニメーション生成のための
-            モーション検索・予測手法の研究。
-          </p>
-        </div>
-
-        <div class="card">
-          <div class="item-title">VR Motion Player</div>
-          <div class="item-meta">Unity / VR / C#</div>
-          <p>
-            VR 空間でモーションデータを操作・再生可能な
-            プレイヤーアプリケーションを開発。
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <section>
-      <h2>Skills</h2>
-      <div class="card">
-        <ul>
-          <li>C / C++ (3DCG, Animation, Native Applications)</li>
-          <li>Python (Machine Learning, Data Analysis)</li>
-          <li>Unity / VR / Motion Capture</li>
-          <li>Git / GitHub / Linux</li>
-        </ul>
-      </div>
-    </section>
-
-    <section>
-      <h2>Links</h2>
-      <div class="card">
-        <ul>
-          <li><a href="https://github.com/yourname" target="_blank">GitHub</a></li>
-          <li><a href="https://twitter.com/yourname" target="_blank">Twitter / X</a></li>
-          <li><a href="mailto:yourname@example.com">Email</a></li>
-        </ul>
-      </div>
-    </section>
 
     <section>
   <h2>Photo Gallery</h2>
